# docs/api.yaml
@@ -1034,6 +1034,187 @@ paths:
       security:
         - bearerAuth: []
 
+  /products:
+    get:
+      summary: Get all products
+      tags:
+        - Products
+      parameters:
+        - name: name
+          in: query
+          description: Names to filter by
+          required: false
+          style: form
+          schema:
+            type: string
+        - name: statusId
+          in: query
+          description: Status to filter by
+          required: false
+          style: form
+          schema:
+            type: integer
+            format: int32
+            default: null
+        - name: page
+          in: query
+          description: The page number for paginated results
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 1
+        - name: limit
+          in: query
+          description: Maximum number of results to return
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10
+      responses:
+        "200":
+          description: A list of products
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  totalItems:
+                    type: integer
+                    example: 100
+                  totalPages:
+                    type: integer
+                    example: 10
+                  currentPage:
+                    type: integer
+                    example: 1
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/ProductResponse"
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+        - bearerAuth: []
+
+    post:
+      summary: Create a new product
+      tags:
+        - Products
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Example
+                categoryId:
+                  type: integer
+                  example: 1
+                description:
+                  type: string
+                  example: Dummy
+                price:
+                  type: number
+                  format: float
+                  example: 100000
+                mainImage:
+                  type: string
+                  format: binary
+                otherImages:
+                  type: array
+                  maxItems: 9
+                  items:
+                    type: string
+                    format: binary
+                mainVideo:
+                  type: string
+                  format: binary
+              required:
+                - name
+                - categoryId
+                - price
+                - mainImage
+      responses:
+        '201':
+          description: The newly created product
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProductResponse"
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+        - bearerAuth: []
+
+  /products/{id}:
+    # put:
+    #   summary: Update a category
+    #   tags:
+    #     - Categories
+    #   parameters:
+    #     - name: id
+    #       in: path
+    #       description: ID of the category to update
+    #       required: true
+    #       schema:
+    #         type: integer
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             name:
+    #               type: string
+    #             parentId:
+    #               type: integer
+    #           required:
+    #             - name
+    #   responses:
+    #     "200":
+    #       description: The updated category
+    #     "400":
+    #       description: Bad Request
+    #     "404":
+    #       description: Category not found
+    #     "500":
+    #       description: Internal Server Error
+    #   security:
+    #     - bearerAuth: []
+
+    delete:
+      summary: Delete a product
+      tags:
+        - Products
+      parameters:
+        - name: id
+          in: path
+          description: ID of the product to delete
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: Product deleted successfully
+        "400":
+          description: Bad Request
+        "404":
+          description: Product not found
+        "500":
+          description: Internal Server Error
+      security:
+        - bearerAuth: []
+
   /sellers/business_types:
     get:
       summary: Get a list of business types
@@ -1276,6 +1457,66 @@ components:
           description:
             type: string
             example: "Dummy"
+
+    ProductResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        uniqueId:
+          type: string
+          example: "17129807205638693702"
+        shopId:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: Sample Product
+        description:
+          type: string
+          example: Dummy dummy dummy
+        price:
+          type: number
+          format: float
+          example: 100000
+        productStatusId:
+          type: integer
+          example: 1
+        mainImageId:
+          type: integer
+          example: 1
+        mainVideoId:
+          type: integer
+          example: 1
+        productImages:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              file:
+                type: string
+                example: "https://storage.googleapis.com/dummy/file_44103033-d9f4-4933-bacc-11701c90e58a.jpg"
+        productVideos:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              file:
+                type: string
+                example: "https://storage.googleapis.com/dummy/file_44103033-d9f4-4933-bacc-11701c90e58a.mp4"
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
 
     # UserAddRequest:
     #   type: object
